src/test/ui/issues/issue-40782.rs
fn main() {
    for i 0..2 { //~ ERROR missing `in`
    }
}
